[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amtools"
version = "0.1.0"
description = "Tools for actuator-based methods."
authors = [{ name = "Dylan Green", email = "dylan.green@eng.ox.ac.uk" }]
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pyvista",
    "pandas"
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "sphinx",
    "sphinx-rtd-theme",      
    "sphinx-autodoc-typehints", 
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]

[project.urls]
Homepage = "https://github.com/UoO-Tidal-and-Wind/Actuator-Method-Tools/tree/main"
Issues = "https://github.com/UoO-Tidal-and-Wind/Actuator-Method-Tools/issues"

